# tls-c-webserver

./: CMakeLists.txt  LICENSE  README.md  client.h  hashmap.c  hashmap.h  main.c  method.h  serve.c  serve.h  tpool.c
certificates/: README.md
files/: index.html  style.css
files/notfound/: notfound.html
include/: cache.h  client.h  filemanager.h  hashmap.h  readhandler.h  requesthandler.h  requesthandler_arg.h  responsetype.h  routetype.h  run.h  serve.h  setup.h  tls.h  tpool.h  writehandler.h
include/hashmaps/: hashmap.h  hashmap_mime.h
include/parsing/: fieldparser.h  parserwrapper.h  readhandler.h  writehandler.h
src/: cache.c  filemanager.c  hashmap.c  main.c  readhandler.c  requesthandler.c  run.c  serve.c  setup.c  tls.c  tpool.c  writehandler.c
src/hashmaps/: hashmap.c  hashmap_mime.c
src/parsing/: fieldparser.c  readhandler.c  writehandler.c
